Fixed Index and Sytle
these shouldn't interfere with anything else now

--- a/style.css
+++ b/style.css
@@ -1,48 +1,59 @@
-@font-face{
-	font-family: 'bebas';
-	src: url('bebas.ttf') format('truetype');
-}
 
+			@font-face{
+				font-family: 'bebas';
+				src: url('bebas.ttf') format('truetype');
+			}
+			
+			body {
+				background-color: #ed1d24;
+				color: #ffffff;
+			}
+			
+			
+			h1 {
+				
+				
+			}
+			a{
+			text-align: center
+			}
+			
+			.entry {
+				background-color: #ed1d24;
+				color: #ffffff;
+				display: block;
+				
 
-h1 {
-	font-family: 'bebas';
-	src: url('bebas.ttf') format('truetype');
-	font-size: 10vw;
-	letter-spacing: -6px;
-	
-}
-body {
-	background-color: #ed1d24 !important;
-	color: #ffffff !important; <!--#021e44-->
-}
-a{
-	text-align: center
-}
+			}
+			
+			.marvel{
+				font-family: 'bebas';
+				src: url('bebas.ttf') format('truetype');
+				font-size: 10vw;
+				letter-spacing: -10px;
+				text-align: center;
+				border-style: solid;
+				border-color: #ffffff;
+			}
+			
+			a:link {
+					color: #ffffff;
+					text-decoration: none;
+			}
+			a:visited {
+				color: #ffffff;
+				text-decoration: none;
+			}
+			a:hover, a:active, a:focus {
+				text-decoration: underline;
+			}
+			
 
-#entry {
-	display: block;
-	font-size: 50;
+			.paraText {
+				border: 1px solid white; 
+				margin: 100px;
+			}
 
-}
-
-a:link {
-	color: #ffffff;
-	text-decoration: none;
-}
-a:visited {
-	color: #ffffff;
-	text-decoration: none;
-}
-a:hover, a:active, a:focus {
-	text-decoration: underline;
-}
-
-
-.paraText {
-	border: 1px solid white; 
-	margin: 100px;
-}
-
-.navBar li{
-	display:inline;
-}
+			.navBar li{
+				display:inline;
+			}
