--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 			}
 			
 			body {
-				background-color: #ed1d24;
-				color: #ffffff;
+				background-color: #ed1d24 !important;
+				color: #ffffff !important;
 			}
 			
 			
