--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-navvybar></app-navvybar>
 
-<div class="container">
+<!--<div class="container">-->
   <router-outlet></router-outlet>
-</div>
+<!--</div>-->
