--- a/angular/src/app/components/hero/hero.component.html
+++ b/angular/src/app/components/hero/hero.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <h3>Heroes of Marvel</h3>
   <ul id="displayHeroes" class="personList">
-
+    <li *ngFor="let char of chars">
+      {{char.id}}: {{char.name}}
+    </li>
   </ul>
 </div>
