--- a/angular/src/app/components/navvybar/navvybar.component.css
+++ b/angular/src/app/components/navvybar/navvybar.component.css
@@ -1,3 +1,16 @@
 .navBar li{
     display:inline;
 }
+.chopMe {
+  /*position: absolute;*/
+  z-index: -1;
+  width: 100%;
+  height: 315px;
+  overflow: hidden;
+}
+.chopMe > img {
+  /*position: absolute;*/
+  /*left: 50%;*/
+  display: block;
+  max-width: inherit;
+}
