--- a/angular/src/app/components/navvybar/navvybar.component.html
+++ b/angular/src/app/components/navvybar/navvybar.component.html
@@ -1,16 +1,18 @@
-
-<nav class="navbar  navbar-expand-md navbar-dark fixed-top bg-dark">
-  <div class="container-fluid">
-      <div class="navbar-header">
-          <a class="navbar-brand" href="index.html">Heroes of Marvel</a>
-      </div>
-      <ul class='nav navbar-nav'>
-          <li class="nav-item"><a class="nav-link" routerLink="/main">Home</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/about">About Marvel</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/hero">Heroes of Marvel</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/villains">Villains of Marvel</a></li>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Heroes of Marvel</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link" routerLink="/main">Home</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/about">About Marvel</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/hero">Heroes of Marvel</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/villains">Villains of Marvel</a></li>
       </ul>
-     
+    </div>
   </div>
 </nav>
-<img class='clipped' src="https://terrigen-cdn-dev.marvel.com/content/prod/1x/characters_art_mas_dsk_01.jpg"/>
+<div class="chopMe"><img class='clipped' src="https://terrigen-cdn-dev.marvel.com/content/prod/1x/characters_art_mas_dsk_01.jpg"/></div>
